# rust_api

./: Cargo.toml
src/: constants.rs  db.rs  env_var.rs  main.rs  responses.rs
src/authors/: author.rs  authors.rs  authors_db.rs  authors_queries.rs  filter.rs  mod.rs
src/books/: book.rs  books.rs  books_db.rs  books_queries.rs  filter.rs  mod.rs
