[package]
name = "api-test"
version = "0.1.0"
authors = ["Saeb Salah <salahsaeb@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sqlx = { version = "0.5.0", features = ["runtime-actix-rustls", "sqlite"] }
actix-web = "4.0.1"
actix-rt = "2.6.0"
serde = { version = "1.0.136", features = ["derive"] }
